--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="css/bootstrap-theme.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/menu.css" type="text/css" rel="stylesheet"/>
+	<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body id="container">
 
@@ -76,21 +77,24 @@
 		  </div>
 		</div>
 
+		<div id="events-satellite">
+			<img src="assets/images/Satellite-icon1.png"/>
+		</div>
 		
 
 
 
 		<script src="script/three.js"></script>
-		<script src="script/OrbitControls.js"></script>
-		<script src="script/DatGuiMin.js"></script>
+		<!-- <script src="script/OrbitControls.js"></script> -->
+		<!-- <script src="script/DatGuiMin.js"></script> -->
 		<script src="script/jquery.js"></script>
 		<script src="script/bootstrap.min.js"></script>
 		<script src="script/script.js"></script>
-		<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-		<script src="http://threejs.org/examples/js/loaders/MTLLoader.js"></script>
-		<script src="http://threejs.org/examples/js/loaders/OBJMTLLoader.js"></script>
+		<!-- <script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script> -->
+		<!-- <script src="http://threejs.org/examples/js/loaders/MTLLoader.js"></script> -->
+		<!-- <script src="http://threejs.org/examples/js/loaders/OBJMTLLoader.js"></script> -->
 		<script src="script/helper.js"></script>
-		<script src="script/particle.js"></script>
+		<!-- <script src="script/particle.js"></script> -->
 		<script src="script/menu.js"></script>		
 		<script src="script/spline.js"></script>
 		<script src="script/saturn.js"></script>
