Sponsors modal added

--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
 		  <div class="modal-content">
 		    <div class="modal-header">
 		      <span class="close" id="spanModal">&times;</span>
-		      <p>Modal Header</p>
+		      <center><p>Modal Header</p></center>
 		    </div>
 		    <div class="modal-body">
-		      <p>Some text in the Modal Body</p>
-		      <p>Some other text...</p>
-		      <p>Some other text...</p>
-		      <p>Some other text...</p>
+		      <div class="row">
+                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+                        </div>
+                </div>
 		    </div>
-		    <div class="modal-footer">
+		    <!-- <div class="modal-footer">
 		      <p>Modal Footer</p>
-		    </div>
+		    </div> -->
 		  </div>
 		</div>
 
