planets with satellites

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="css/bootstrap-theme.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/menu.css" type="text/css" rel="stylesheet"/>
+	<link href="css/jquery-ui.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body id="container">
@@ -78,7 +79,45 @@
 		</div>
 
 		<div id="events-satellite">
-			<img src="assets/images/Satellite-icon1.png"/>
+			<div id="satellite-div-1">
+				<img id="satellite-1" class="float-satellite1" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">MISCELLANEOUS</p>
+			</div>
+			<div id="satellite-div-2">
+				<img id="satellite-2" class="float-satellite2" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">MUSIC</p>
+			</div>
+			<div id="satellite-div-3">
+				<img id="satellite-3" class="float-satellite3" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">DANCE</p>
+			</div>
+			<div id="satellite-div-4">
+				<img id="satellite-4" class="float-satellite4" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">LITERARY</p>
+			</div>
+			<div id="satellite-div-5">
+				<img id="satellite-5" class="float-satellite5" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">PRO NIGHTS</p>
+			</div>
+			<div id="satellite-div-6">
+				<img id="satellite-6" class="float-satellite6" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">DRAMA</p>
+			</div>
+			<div id="satellite-div-7">
+				<img id="satellite-7" class="float-satellite7" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">FASHION</p>
+			</div>
+			<div id="satellite-div-8">
+				<img id="satellite-8" class="float-satellite8" src="assets/images/Satellite-icon1.png"/>
+				<p class="style-p">INFORMAL EVENTS</p>
+			</div>
+			<!-- <img id="satellite-2" class="float-satellite2" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-3" class="float-satellite3" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-4" class="float-satellite4" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-5" class="float-satellite5" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-6" class="float-satellite6" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-7" class="float-satellite7" src="assets/images/Satellite-icon1.png"/>
+			<img id="satellite-8" class="float-satellite8" src="assets/images/Satellite-icon1.png"/> -->
 		</div>
 		
 
@@ -88,6 +127,7 @@
 		<!-- <script src="script/OrbitControls.js"></script> -->
 		<!-- <script src="script/DatGuiMin.js"></script> -->
 		<script src="script/jquery.js"></script>
+		<script src="script/jquery-ui.min.js"></script>
 		<script src="script/bootstrap.min.js"></script>
 		<script src="script/script.js"></script>
 		<!-- <script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script> -->
@@ -102,6 +142,7 @@
 		<!-- <script src="script/mouse.js"></script> -->
 		<script src="script/run.js"></script>
 		<script src="script/cameraMovement.js"></script>
+		<script src="script/events-satellite.js"></script>
 		
 	</body>
 </html>
