Events modals different made

--- a/index.html
+++ b/index.html
@@ -80,45 +80,213 @@
 		</div>
 
 		<div id="events-satellite">
+			
+			<!-- Satellite  1 -->
 			<div id="satellite-div-1">
 				<img id="satellite-1" class="float-satellite1" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">MISCELLANEOUS</p>
+				<p id="satellite-p-1" class="style-p">MISCELLANEOUS</p>
 			</div>
+			<div id="satellite-modal-1" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>MISCELLANEOUS</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
+
+
+			<!-- Satellite  2 -->
 			<div id="satellite-div-2">
 				<img id="satellite-2" class="float-satellite2" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">MUSIC</p>
+				<p id="satellite-p-2" class="style-p">MUSIC</p>
 			</div>
+			<div id="satellite-modal-2" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>MUSIC</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
 			<div id="satellite-div-3">
 				<img id="satellite-3" class="float-satellite3" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">DANCE</p>
+				<p id="satellite-p-3" class="style-p">DANCE</p>
 			</div>
+			<div id="satellite-modal-3" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>DANCE</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
+
 			<div id="satellite-div-4">
 				<img id="satellite-4" class="float-satellite4" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">LITERARY</p>
+				<p id="satellite-p-4" class="style-p">LITERARY</p>
 			</div>
+			<div id="satellite-modal-4" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>LITERARY</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
 			<div id="satellite-div-5">
 				<img id="satellite-5" class="float-satellite5" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">PRO NIGHTS</p>
+				<p id="satellite-p-5" class="style-p">PRO NIGHTS</p>
 			</div>
+			<div id="satellite-modal-5" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>PRO NIGHTS</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
+
 			<div id="satellite-div-6">
 				<img id="satellite-6" class="float-satellite6" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">DRAMA</p>
+				<p id="satellite-p-6" class="style-p">DRAMA</p>
 			</div>
+			<div id="satellite-modal-6" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>DRAMA</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
 			<div id="satellite-div-7">
 				<img id="satellite-7" class="float-satellite7" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">FASHION</p>
+				<p id="satellite-p-7" class="style-p">FASHION</p>
 			</div>
+			<div id="satellite-modal-7" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>FASHION</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
 			<div id="satellite-div-8">
 				<img id="satellite-8" class="float-satellite8" src="assets/images/Satellite-icon1.png"/>
-				<p class="style-p">INFORMAL EVENTS</p>
+				<p id="satellite-p-8" class="style-p">INFORMAL EVENTS</p>
 			</div>
-			<!-- <img id="satellite-2" class="float-satellite2" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-3" class="float-satellite3" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-4" class="float-satellite4" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-5" class="float-satellite5" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-6" class="float-satellite6" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-7" class="float-satellite7" src="assets/images/Satellite-icon1.png"/>
-			<img id="satellite-8" class="float-satellite8" src="assets/images/Satellite-icon1.png"/> -->
+			<div id="satellite-modal-8" class="modal">
+			  <!-- Modal content -->
+			  <div class="modal-content">
+			    <div class="modal-header">
+			      <span class="close" id="spanModalSatellite">&times;</span>
+			      <center><p>INFORMAL EVENTS</p></center>
+			    </div>
+			    <div class="modal-body">
+			      <div class="row">
+	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+	                        </div>
+	                </div>
+			    </div>
+			    <!-- <div class="modal-footer">
+			      <p>Modal Footer</p>
+			    </div> -->
+			  </div>
+			</div>
+
+
 		</div>
 		
 
