--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 			<div id="contact" class="col-xs-2 align-center">CONTACT</div>
 			<div id="registration" class="col-xs-2 align-center">REGISTRATION</div>
 		</div>
-		<div id="myModal" class="modal">
+		
+		<div id="sponsorModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 		    <div class="modal-header">
