modals for event pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	
 
 	<title>Engifest</title>
+	<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
+	<link href="css/events.css" type="text/css" rel="stylesheet"/>
 	<link href="css/modal.css" type="text/css" rel="stylesheet"/>
 	<link href="css/style.css" type="text/css" rel="stylesheet"/>
 	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
@@ -15,7 +17,7 @@
 	<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/menu.css" type="text/css" rel="stylesheet"/>
 	<link href="css/jquery-ui.min.css" type="text/css" rel="stylesheet"/>
-	<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
+
 	</head>
 	<body id="container">
 
@@ -95,9 +97,20 @@
 			    </div>
 			    <div class="modal-body">
 			      <div class="row">
-	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-	                        </div>
+	                    <div class="col-xs-12">
+	                    <center>
+	                    	<ul class="event-ul">
+	                            <li><a href="events/shakedown/"  class="event-list">Shakedown</a></li>
+	                            <li><a href="events/kaleidoscope/" class="event-list">Kaleidoscope</a></li>
+	                            <li><a href="events/arte-fotographia/" class="event-list">Arte Fotographia</a></li>
+	                            <li><a href="events/mr-miss-engi/" class="event-list">Mr and Miss Engifest</a></li>
+	                            <li><a href="events/kumar-vishwas-live/" class="event-list">Kumar Vishwas Live</a></li>
+	                            <li><a href="events/the-engi-quiz/" class="event-list">The Engi Quiz</a></li>
+	                            
+	                        </ul>
+	                       </center>
+	                    </div>
+	         
 	                </div>
 			    </div>
 			    <!-- <div class="modal-footer">
