Modal problem resolved

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="css/events.css" type="text/css" rel="stylesheet"/>
 	<link href="css/modal.css" type="text/css" rel="stylesheet"/>
 	<link href="css/style.css" type="text/css" rel="stylesheet"/>
+	<link href="css/home.css" type="text/css" rel="stylesheet"/>
 	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/bootstrap-theme.min.css" type="text/css" rel="stylesheet"/>
 	<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
@@ -122,6 +123,101 @@
 		  </div>
 		</div>
 
+		<!-- Home -->
+<!-- 		<div class="object1">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div>
+
+		<div class="object2">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div>
+
+		<div class="object3">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div>
+
+		<div class="object4">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div>
+
+		<div class="object5">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div>
+
+		<div class="object6">
+		    <div class="ray_box">
+		        <div class="ray ray1"></div>
+		        <div class="ray ray2"></div>
+		        <div class="ray ray3"></div>
+		        <div class="ray ray4"></div>
+		        <div class="ray ray5"></div>
+		        <div class="ray ray6"></div>
+		        <div class="ray ray7"></div>
+		        <div class="ray ray8"></div>
+		        <div class="ray ray9"></div>
+		        <div class="ray ray10"></div>
+		    </div>
+		</div> -->
+
+
+
+
+		<!-- Events Satellites -->
 		<div id="events-satellite">
 			
 			<!-- Satellite  1 -->
@@ -366,6 +462,7 @@
 		<script src="script/run.js"></script>
 		<script src="script/cameraMovement.js"></script>
 		<script src="script/events-satellite.js"></script>
+		<script src="script/home.js"></script>
 		
 	</body>
 </html>
