Sponsors spelling correction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<title>Engifest</title>
 
 		<!-- Css Needed -->
-
 		<link href="css/loader.css" type="text/css" rel="stylesheet"/>
 		<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
 		<link href="css/modal.css" type="text/css" rel="stylesheet"/>
@@ -84,7 +83,7 @@
 		<div id="Menu" class="row">
 			<div id="home" class="col-xs-2 col-xs-offset-1 align-center">HOME</div>
 			<div id="events" class="col-xs-2 align-center">EVENTS</div>
-			<div id="sponsers" class="col-xs-2 align-center">SPONSERS</div>
+			<div id="sponsors" class="col-xs-2 align-center">SPONSORS</div>
 			<div id="contact" class="col-xs-2 align-center">CONTACT</div>
 			<div id="registration" class="col-xs-2 align-center">REGISTRATION</div>
 		</div>
