--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	        <div class="page-container sidebar-collapsed">
 				<div class="sidebar-menu">
 		                
-		                <div style="border-top:1px solid rgba(69, 74, 84, 0.7)"></div>
+		                <div style=""></div>
 		                <div class="menu">
 		                  <ul id="menu">
 		                    <!--<li id="#home" class="menu-venue"><a href="javascript:void(0)"><i class="fa fa-home"></i><span>Home</span></a></li>-->
