--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link href="css/home.css" type="text/css" rel="stylesheet"/>
 		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<link href="css/bootstrap-theme.min.css" type="text/css" rel="stylesheet"/>
-		<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link href="css/menu.css" type="text/css" rel="stylesheet"/>
 		<link href="css/jquery-ui.min.css" type="text/css" rel="stylesheet"/>
 		<link href="css/events-nav.css" type="text/css" rel="stylesheet"/>
