Literary Events added

--- a/index.html
+++ b/index.html
@@ -1164,9 +1164,180 @@
 			    </div>
 			    <div class="modal-body">
 			      <div class="row">
-	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-	                        </div>
+	                    <div class="col-xs-3">
+	                    	<ul class="event-ul nav nav-tabs nav-stacked">
+	                            <li><a data-toggle="tab" href="#parliamentary-debate" class="event-list float-nav">Parliamentary Debate</a></li>
+	                            <li><a data-toggle="tab" href="#just-a-minute" class="event-list float-nav">Just A Minute</a></li>
+	                            <li><a data-toggle="tab" href="#creative-writing" class="event-list float-nav">Creative Writing</a></li>
+	                            <li><a data-toggle="tab" href="#mixed-bag" class="event-list float-nav">Mixed Bag</a></li>
+	                        </ul>
+	                    </div>
+	                    <div class="col-xs-9">
+	                    	<div class= "tab-content">
+		                    	<!-- Parliamentary Debate -->
+		                    	<div id="parliamentary-debate" class="tab-pane fade in active">
+			                    	<ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#parliamentary-debatehome">Info</a></li>
+						                <li><a data-toggle="tab" href="#parliamentary-debatemenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#parliamentary-debatemenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1v0aiBC8-hb0xxZ4EUiXITfXjhhBMh4AsmH_OxNpBHz0/viewform">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="parliamentary-debatehome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">A standard Asian format Parliamentary Debate competition, this event is assured to be a fierce battle of wit and words, designed to challenge and enhance the contestants’ debating prowess and their teamwork ability.
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13th &amp; 14th Feb<br>
+						                            <b>Time: </b>11:00 am<br>
+						                            <b>Venue: </b>Mech Block<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="parliamentary-debatemenu1" class="tab-pane fade">
+						                    <div class="rule-content">1. Each team shall consist of 3 speakers and 1 adjucator.<br>
+						                        2. The Formal followed would be a one vs one Knockout PD.<br>
+						                        3. Each team has to prepare and send a résumé to sahitya.dtu@gmail.com . Teams will be shortlisted on the basis of their résumé.<br>
+						                        4.  The Asian format of Parliamentary Debate will be followed.<br>
+						                        5. The deadline for registration is 20th January '16.<br>
+						                    </div>
+						                </div>
+						                <div id="parliamentary-debatemenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Vidushi Tyagi </b> +91-9871739158 <br>
+						                        <b>Pooja Chopra</b> +91-8860836738 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+					            <!-- Just A Minute -->
+					            <div id="just-a-minute" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#just-a-minutehome">Info</a></li>
+						                <li><a data-toggle="tab" href="#just-a-minutemenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#just-a-minutemenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1paDU0tupxvIyikhOrx7PlJ8686VfLCLxTHSm7gaVQDY/viewform?c=0&amp;w=1">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="just-a-minutehome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">Get ready for this fast paced, 60 second linguistic thriller! This battle tests your quick thinking, speaking ability and command over the English language. You will be pitted against several students in this war zone and no mercy will be shown. Get ready for this year most EPIC battle. You got a minute to win it.<br>
+												The game is divided into two stages:<br>
+												1. Basically in this stage groups of 8 or 9, depending on the number of players present during the event, will be formed. A face off will be held and the one with the most points qualify.<br>
+												2. The winners of each group will go against each other and following the same pattern (obviously), the one with the most points will win.<br>
+												There are various different rounds that the participant may have to take part in. The examples include the Rhyme round, Disconnect round, Alphabetical round and many more.
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13th Feb<br>
+						                            <b>Time: </b>11:00 am<br>
+						                            <b>Venue: </b>Science Block<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="just-a-minutemenu1" class="tab-pane fade">
+						                    <div class="rule-content">
+						                        The rules of the game are simple and will be told to on the spot by the JAM master - the judge of the event.<br>
+						                        The most common rules are mentioned here:<br>
+												1. You CANNOT be boring.<br>
+						                        2. You have to be grammatically correct. <br>
+						                        3. Queens English is a MUST.<br>
+						                        4. You cannot hesitate.<br>
+						                        You will be judged based on wit, humor, spontaneity and various other criteria that depend solely on the discretion of the JAM master. <br>
+						                    </div>
+						                </div>
+						                <div id="just-a-minutemenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Aditya </b> +91-9711763847 <br>
+						                        <b>Mudit</b> +91-9971200645 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						        <!-- Creative Writing -->
+						        <div id="creative-writing" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#creative-writinhome">Info</a></li>
+						                <li><a data-toggle="tab" href="#creative-writinmenu1">Procedure</a></li>
+						                <li><a data-toggle="tab" href="#creative-writinmenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1NYwgqiHztVTDxNs5Vs3XEumiesGioh7z6FUvzojNnOM/viewform?c=0&amp;w=1">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="creative-writinhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">The online preliminaries are as follows:<br>
+						                            Compose a paragraph/poem/prose in 400 characters (NOT WORDS, CHARACTERS) on the topic "Mirror or दर्पण" and send it to us by February 10, midnight.<br>
+						                            The selected entries shall face a tougher battle in the offline round on February 13 at DTU campus.
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13th Feb<br>
+						                            <b>Time: </b>3:00 pm<br>
+						                            <b>Venue: </b>Science Block<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="creative-writinmenu1" class="tab-pane fade">
+						                    <div class="rule-content">
+						                        1.  Download Fluttr from Google Play Store: http://getfluttr.com/mobile.<br>
+						                        2. Post your entries in the channel "Sahitya - DTU Creative Writing Competition" in 'Discover' section. iOS and Windows phone users may send in their entries at sahitya.dtu@gmail.com <br>
+						                        3. Mention your email ID and contact number. You'll be informed about your selection by 11th February.<br>
+						                        Entries shall be accepted in Hindi and English only.<br>
+						                    </div>
+						                </div>
+						                <div id="creative-writinmenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Abuzar Jamal</b> +91-9810682595 <br>
+						                        <b>Ishna Kaul</b> +91-9953148879 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						        <!-- Mixed Bag -->
+						        <div id="mixed-bag" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#mixed-baghome">Info</a></li>
+						                <li><a data-toggle="tab" href="#mixed-bagmenu2">Contact</a></li>
+						                <button class="btn pull-right" href="https://docs.google.com/forms/d/1wSeSWTFECh1FG3M5I-RDKQ8sFb5un0gY5vg4VOgEa_4/viewform?c=0&amp;w=1">Register</button>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="mixed-baghome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">A Word Games event, this is the ultimate amalgamation of literary, lingual and logical hurdles for all the master of all trades out there!<br>
+						                        The rules are pretty simple:<br>
+						                        The event comprises of only one round, which will be in the form of 1.5 hours written test, where we test your word power and creativity with an array of out of box questions.<br>
+						                        Three members maximum allowed in team. Lone wolves allowed as well.<br>
+						                        This is the event where you battle for the title of the 'Ultimate Master of Words'!
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>14th Feb<br>
+						                            <b>Time: </b>11:00 am<br>
+						                            <b>Venue: </b>Science Block<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="mixed-bagmenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        <b>Anmol Bharaj </b> +91-9717509414 <br>
+						                        <b>Ishaa Bishnoi</b> +91-9910077616 <br>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+
+						    </div>
+	                    </div>
+	         
 	                </div>
 			    </div>
 			    <!-- <div class="modal-footer">
