--- a/index.html
+++ b/index.html
@@ -1360,9 +1360,116 @@
 			    </div>
 			    <div class="modal-body">
 			      <div class="row">
-	                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-	                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-	                        </div>
+	                    <div class="col-xs-3">
+	                    	<ul class="event-ul nav nav-tabs nav-stacked">
+	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>
+	                            <li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>
+	                            <li><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
+	                            <li><a data-toggle="tab" href="#antariksh-band" class="event-list float-nav">Antariksh Band</a></li>
+	                        </ul>
+	                    </div>
+	                    <div class="col-xs-9">
+	                    	<div class= "tab-content">
+		                    	<!-- Rock Night -->
+		                    	<div id="rock-night" class="tab-pane fade in active">
+			                    	<ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#rock-nighthome">Info</a></li>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="rock-nighthome" class="tab-pane fade in active">
+						                    <div class="info-content" style="overflow-y: auto;">
+						                        <div class="info-row">
+						                            “Rock and roll is a nuclear blast of reality in a mundane world where no-one is allowed to be magnificent.”
+						                            -Kim Fowley <br>
+
+						                            Engifest’16 brings you some of the best rock talent in the country for a sonically exhilarating experience that will leave your senses absolutely spellbound!
+						                            You won’t be able to resist banging your heads to the powerful beats and tapping your feet with the intense music; so overwhelmingly influencing will be the aura at this event! <br>
+						                            <b>Date: </b>14 Feb<br>
+						                            <b>Time: </b>8:00 pm<br>
+						                            <b>Venue: </b>Sports Complex<br>
+						                        </div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+					            <!-- >EDM Night -->
+					            <div id="edm-night" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#edm-nighthome">Info</a></li>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="edm-nighthome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">EDM- what once developed from a small culture and now one of the biggest music culture of the world.Hardwell, Garrix, Guetta being just a few names.<br>
+						                        With the catchy beats and the electrifying rhythm, Engifest 2k16 endeavors a night in our own campus, where each head will keep banging and every feet will groove  under the electric sky. The moment when you'll realize EDM is not music anymore it's a lifestyle. YOLO..!!!
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>15 Feb<br>
+						                            <b>Time: </b>7:00 pm<br>
+						                            <b>Venue: </b>Sports Complex<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						        <!-- Livewire -->
+						        <div id="livewire" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#livewirehome">Info</a></li>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="livewirehome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                            "Bachna ae Haseeno" "Bombaii Nagariya" se "Ik Junoon" leke do "chokre Jawan" aarhe hai jinhe sunke aap "D se dance" karne ko majhboor hojaenge. <br><br>
+
+						                            Yes, believe it. VISHAL DADLANI and SHEKHAR RAVJIANI The dynamic duo is here to set fire to the Engifest stage on February 13th in the Star Night with its enthralling compositions and riveting stage performance!<br><br>
+
+						                            Not only have they dropped the best romance singles one after the other (Read: ‘Tu Aashiqui Hai’, ‘Tujhe Bhula Diya’, ‘Jaane Kyun’ etc.); they have also given some amazing party anthems that you can’t resist busting a groove to!  (Read: ‘Sheila Ki Jawani’, ‘Bachna Ae Haseeno’, ‘Criminal’ and ‘Desi Girl’).<br><br>
+
+						                            So guys, clear your schedules and brace yourselves. As this night you’ll learn to party, Engifest style.<br><br>
+						                            A big shout out to OJAS Entertainment for making this memorable event possible! Thank you for all the help and support you have provided for this to happen smoothly.<br><br>
+						                            For free passes, <a href="../../register/index.html">register here.</a>
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>13 Feb<br>
+						                            <b>Time: </b>8:00 pm<br>
+						                            <b>Venue: </b>Sports Complex<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+						        <!-- Antariksh Band -->
+						        <div id="antariksh-band" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#antariksh-bandhome">Info</a></li>
+						                
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="mixed-baghome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                        	Will Be Up Shortly
+						                        </div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+
+
+						    </div>
+	                    </div>
+	         
 	                </div>
 			    </div>
 			    <!-- <div class="modal-footer">
